add navigation component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -533,4 +533,7 @@
 <!-- * * * * * * * * * * End of Placeholder * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
-<router-outlet></router-outlet>
+<app-navigation>
+  <router-outlet></router-outlet>
+</app-navigation>
+
