--- a/src/app/internal/navigation/navigation.component.html
+++ b/src/app/internal/navigation/navigation.component.html
@@ -1,5 +1,6 @@
 
-<mat-toolbar color="primary">
+<mat-toolbar color="primary"
+             [class.mat-elevation-z4]="true">
   <span>Words Vector</span>
 </mat-toolbar>
 <!-- Add Content Here -->
