--- a/src/app/internal/views/dashboard/container/dashboard.component.scss
+++ b/src/app/internal/views/dashboard/container/dashboard.component.scss
@@ -6,9 +6,14 @@
   //place-items: center;
   //height: calc(100vh - 64px);
 
+
   .box{
     padding: 20px;
     border-radius: 6px;
+    .title{
+      font-size: 22px;
+      font-family: Roboto, "Helvetica Neue", sans-serif;
+    }
     form{
       div:nth-child(1){
         font-size: 22px;
@@ -17,19 +22,7 @@
         }
       }
 
-      div:nth-child(2) {
-        mat-radio-group{
-          display: grid;
-          grid-gap: 8px;
-          mat-radio-button{
-            span{
-              white-space: unset;
-            }
-          }
-        }
-      }
-
-      div:nth-child(3){
+      div:nth-child(2){
         margin-top: 16px;
         display: flex;
         justify-content: center;
@@ -44,13 +37,61 @@
     }
   }
 
-  //.box:nth-child(1){
-  //  grid-template: '';
-  //}
-  //.box:nth-child(2){
-  //  grid-template: '';
-  //}
+
   .box:nth-child(3){
     grid-column: span 2;
+
+    .list-texts{
+      display: grid;
+      grid-gap: 16px;
+      overflow-y: auto;
+      max-height: 400px;
+      padding: 16px;
+      div{
+        font-size: 18px;
+        padding: 16px;
+        border-radius: 6px;
+        z-index: 10;
+        transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+        box-shadow:
+          0 3px 1px -2px rgba(0,0,0,.2),
+          0 2px 2px 0 rgba(0,0,0,.14),
+          0 1px 5px 0 rgba(0,0,0,.12);
+        &:hover{
+          cursor: pointer;
+          transform: scale(1.02);
+          box-shadow: 0 2px 4px -1px rgba(0,0,0,.2), 0 4px 5px 0 rgba(0,0,0,.14), 0 1px 10px 0 rgba(0,0,0,.12);
+        }
+      }
+      div.select{
+        transform: scale(1.02);
+        box-shadow: 0 2px 4px -1px rgba(0,0,0,.2), 0 4px 5px 0 rgba(0,0,0,.14), 0 1px 10px 0 rgba(0,0,0,.12);
+      }
+      div:first-child{
+        margin-top: 8px;
+      }
+      div:last-child{
+        margin-bottom: 8px;
+      }
+    }
+  }
+
+  .box:nth-child(4) {
+    grid-column: span 2;
+    mat-radio-group{
+      display: grid;
+      grid-gap: 8px;
+      mat-radio-button{
+        span{
+          white-space: unset;
+        }
+      }
+    }
+  }
+
+  .box:nth-child(5) {
+    grid-column: span 2;
+    font-size: 18px
+  ;
   }
 }
